# ballista

./: .gitignore  .oxlintrc.json  .prettierignore  CLAUDE.md  README.md  index.html  nuxt.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build-ballista.yml  build-catapault.yml  build-launcher.yml
app/: app.vue  enums.ts  types.d.ts
app/assets/css/: main.css
app/components/: BriefServerInfo.vue  ConnectionInput.vue  InsertableDropdown.vue  LandingServerInfo.vue  Sidebar.vue  TrustCertModal.vue  TrustCertificateDialog.vue
app/composables/: useConfirmRejectModal.ts  useTheme.ts  useZoom.ts
app/pages/: index.vue  settings.vue
app/pages/connections/: [id].vue
src/: App.css  App.tsx  Appwithtailwind.tsx  CertDialog.tsx  ballistaInfo.ts  connection.ts  connections.ts  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: 32x32.icns
src-tauri/src/: con.rs  connection.rs  errors.rs  main.rs  pinned_downloader.rs  verify.rs  webstart.rs
src-tauri/test-resources/: MANIFEST.MF  RSA.RSA  RSA.SF  signing-keys.jceks
src/components/: ConnectionForm.tsx  Dashbaord.tsx  app-sidebar.tsx  nav-main.tsx
src/components/ui/: password-input.tsx  sidebar.tsx
src/hooks/: use-debounce.ts
