[package]
name = "catapult"
version = "0.3.0-snapshot"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["api-all", "system-tray"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
# the above are added and required by Tauri
roxmltree = "0.18.0"
reqwest = { version = "0.11.18", features = ["blocking", "native-tls-vendored"] }
anyhow = "1.0.71"
sha2 = "0.10.6"
hex = "0.4.3"
uuid = {version = "1.3.3", feature= ["v4", "fast-rng"] }
home = "0.5.5"
zip = {version = "0.6.6", feature = ["deflate"] }
rustc-hash = "1.1.0"
openssl = { version = "0.10.55", features = ["vendored"] }
openssl-probe = "0.1.5"
asn1-rs = "0.5.2"

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"
branch = "dev"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
