[package]
name = "ballista"
version = "0.6.0"
description = "A Mirth Connect Admin Client Launcher"
authors = ["kiran@sereen.io"]
homepage = "https://sereen.io"
license = "MPL-2.0"
repository = "https://github.com/kayyagari/ballista"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.2", features = ["tray-icon"] }
tauri-runtime-wry = "2.5.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
# the above are added and required by Tauri
roxmltree = "0.18.0"
reqwest = { version = "0.12.12", features = ["blocking", "native-tls-vendored"] }
anyhow = "1.0.96"
sha2 = "0.10.8"
hex = "0.4.3"
uuid = {version = "1.14.0", feature= ["v4", "fast-rng"] }
home = "0.5.11"
zip = {version = "2.2.2", feature = ["deflate"] }
rustc-hash = "2.1.1"
openssl = { version = "0.10.72" }
openssl-probe = "0.1.6"
asn1-rs = "0.7.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-http = "2.3.0"
tauri-plugin-os = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-process = "2.2.0"
tauri-plugin-clipboard-manager = "2.2.1"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-notification = "2.2.1"

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"
branch = "dev"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.2.0"
